<resources
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingTranslation">


    <string name="zhuce">新用户注册</string>
    <string name="app_name">彩谱科技</string>
    <string name="home_page">http://www.chnspec.com/</string>
    <!--<string name="home_page"> http://www.hzcaipu.com/</string>-->

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_connect">连接仪器</string>
    <string name="action_seach">搜索</string>
    <string name="action_add">添加</string>


    <string name="settings">设置</string>
    <string name="message_board">留言板</string>
    <string name="share">分享</string>
    <string name="orderform">我的订单</string>
    <string name="tools">工具</string>
    <string name="mine_notification">我的通知</string>
    <string name="aboutus">关于我们</string>
    <string name="more">more</string>
    <string name="db">数据库</string>
    <string name="database">数据库</string>

    <string-array name="titles">
        <item>首页</item>
        <item>产品展示</item>
        <item>解决方案</item>
        <item>新闻动态</item>
        <item>行业知识</item>
    </string-array>


    <string name="title_activity_settings">Settings</string>
    <!-- Strings related to Settings -->
    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value"/>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="instrument_names">仪器名称</string>

    <string name="action_heart">heart</string>
    <string name="title_activity_light_color2">分光测色2.0</string>
    <string name="title_activity_light_color4">分光测色4.0</string>
    <string name="delete">删除</string>
    <string name="initnized">初始化</string>

    <string name="shifou_zhuxiao">是否注销登录?</string>
    <string name="shifou_qiangzhi">该账号已在其他设备上登录，是否强制登录?</string>

    <string name="queding">确定</string>
    <string name="quxiao">取消</string>
    <string name="ins_info">仪器信息</string>
    <string name="save">保存</string>
    <string name="title_activity_lustre">光泽度计</string>
</resources>
